# scan2pdf

./: .gitignore  README.md  build.gradle.kts  pyproject.toml
.github/workflows/: ci.yml
adapter-pdfbox/src/main/java/io/img2pdf/adapter/pdfbox/: DeskewImagePreProcessor.java  PdfBoxPdfWriter.java
adapter-pdfbox/src/test/java/io/img2pdf/adapter/pdfbox/: DeskewImagePreProcessorTest.java  PdfBoxPdfWriterTest.java
application/src/main/java/io/img2pdf/application/outbound/: ImagePreProcessorPort.java
application/src/main/java/io/img2pdf/application/service/: ConvertImagesToPdfService.java  FileCollector.java
application/src/test/java/io/img2pdf/application/service/: ConvertImagesToPdfServiceTest.java
cli/src/main/java/io/img2pdf/cli/: Main.java  Scan2PdfCliCommand.java
cli/src/test/java/io/img2pdf/cli/: Scan2PdfCliCommandTest.java
docs/: install.md  options.md  usage.md
domain/src/main/java/io/img2pdf/domain/model/: PdfOptions.java
scan2pdf/: __init__.py  cli.py  core.py
scripts/: generate_scans_a5_pdf.sh  merge-images-odd-even.sh
tests/: test_scan_to_pdf.py
