[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scan2pdf"
version = "0.1.0"
description = "Normalize scanned images and export a single PDF."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Pillow>=10.0",
  "pypdf>=4.0",
]

[project.optional-dependencies]
deskew = [
  "opencv-python>=4.8",
]

[project.scripts]
scan2pdf = "scan2pdf.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["scan2pdf*"]
